fix some spacing, alignments

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -36,22 +36,24 @@ h2 {
 
 .title,
 .subtitle {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .title {
   height: 8rem;
   position: relative;
   top: 1rem;
+  line-height: 4rem;
 }
 
 .subtitle {
   height: 4rem;
   padding-left: 1rem;
   padding-right: 1rem;
+  line-height: 1.6rem;
 }
 
 .subtitle h2 {
